--- a/videos/nothing-went-wrong/nothing-went-wrong.html
+++ b/videos/nothing-went-wrong/nothing-went-wrong.html
@@ -30,29 +30,30 @@
     <p class="caption">Click video to view preview reel</p>
   </div>
 
-  <!-- 📷 Optional Photo Before Text -->
+  <!-- 📃 Description Section -->
+  <section>
+    <h1 class="title">AND IF NOTHING WENT WRONG</h1>
+    <p>Long Form Solo Video Effort, 2024.</p>
+    <li>Debuted at YES GALLERY's exhibition "I Will Remember This Dream Of Gentleness".</li>      
+
+
+      <!-- 📷 Optional Photo Before Text -->
   <div class="image-container">
     <img src="images/nothing-went-wrong-still1.jpg" alt="Still from video" class="header-img" />
   </div>
 
-  <!-- 📃 Description Section -->
-  <section>
-    <h1 class="title">AND IF NOTHING WENT WRONG</h1>
-    <p><strong>2024</strong> – Long Form Solo Video Effort</p>
-
     <p><strong>Credits</strong></p>
-      <li>Debuted at YES GALLERY's "I Will Remember This Dream Of Gentleness" exhibition. April 27 2024.</li>      
       <p></p>
       <li>Shot, dir, edit – Luke Magette.</li>
-      <li>Featuring Cameron Clifford.</li>
+      <li>Featuring Cameron Clifford & Luke Magette.</li>
       <li></li>
       <li>Special thanks to Ryan Aasen.</li>      
       <li></li>      
 
-    <p><strong>More Info</strong></p>
+    <p><strong>Details</strong></p>
     <p>
       </li>Full-length runtime - 1:20:01.</li>
-      </li>Recorded live on a mix of security cameras & camcorders. Edited with Final Cut Pro for Mac.</li>
+      </li>Recorded live on security cameras & camcorders. Edited with Final Cut Pro for Mac.</li>
       </li>Shot on location in Hoboken, NJ.</li>
       <p></p>    
       </li>Inquire further for installation details & to view full-length project.</li>
