--- a/videos/nothing-went-wrong/nothing-went-wrong.html
+++ b/videos/nothing-went-wrong/nothing-went-wrong.html
@@ -42,22 +42,19 @@
     <img src="images/nothing-went-wrong-still1.jpg" alt="Still from video" class="header-img" />
   </div>
 
-    <p><strong>Credits</strong></p>
-      <p></p>
-      <li>Shot, dir, edit – Luke Magette.</li>
-      <li>Featuring Cameron Clifford & Luke Magette.</li>
-      <li></li>
-      <li>Special thanks to Ryan Aasen.</li>      
-      <li></li>      
+  <p><strong>Credits</strong></p>
+  <p>Shot, dir, edit – Luke Magette.</p>
+  <p>Featuring Cameron Clifford & Luke Magette.</p>
+  <p>Special thanks to Ryan Aasen.</p>
 
-    <p><strong>Details</strong></p>
-    <p>
-      </li>Full-length runtime - 1:20:01.</li>
-      </li>Recorded live on security cameras & camcorders. Edited with Final Cut Pro for Mac.</li>
-      </li>Shot on location in Hoboken, NJ.</li>
-      <p></p>    
-      </li>Inquire further for installation details & to view full-length project.</li>
-    </p>
+
+  <p><strong>Details</strong></p>
+  <p>Full-length runtime – 1:20:01.</p>
+  <p>Recorded live on security cameras & camcorders.</p>
+  <p>Edited with Final Cut Pro for Mac.</p>
+  <p>Shot on location in Hoboken, NJ.</p>
+  <p>Inquire further for installation details & to view full-length project.</p>
+
   </section>
 
   <!-- 📷 Optional Photo After Text -->
