--- a/videos/index.html
+++ b/videos/index.html
@@ -111,6 +111,52 @@
 <p>RECAP VIDEO FOR STEVENS INST OF TECHNOLOGY.<p>
     </div>
 
+    <!-- Video Block 6: HOLDING ON-->
+    <div class="video-preview">
+      <!-- Embed small silent looping preview clip -->
+      <a href="holding-on.html">
+        <video autoplay muted loop playsinline class="preview-clip">
+          <source src="videoclips/holding-on-preview.mp4" type="video/mp4" />
+          <!-- Fallback text for unsupported browsers -->
+          Your browser does not support the video tag.
+        </video>
+      </a>
+      <!-- Title of the video work -->
+     <p class="project-title"><a href="holding-on/holding-on.html">HOLDING ON, 2021</a>
+<p>MUSIC VIDEO FOR 622CHAOS.<p>
+    </div>
+
+    <!-- Video Block 7: DOGFIGHT-->
+    <div class="video-preview">
+      <!-- Embed small silent looping preview clip -->
+      <a href="dogfight.html">
+        <video autoplay muted loop playsinline class="preview-clip">
+          <source src="videoclips/dogfight-preview.mp4" type="video/mp4" />
+          <!-- Fallback text for unsupported browsers -->
+          Your browser does not support the video tag.
+        </video>
+      </a>
+      <!-- Title of the video work -->
+     <p class="project-title"><a href="dogfight/dogfight.html">DOGFIGHT, 2025</a>
+<p>VISUALIZER FOR WORREN.<p>
+    </div>
+
+    <!-- Video Block 8: FORM CONTENT2-->
+    <div class="video-preview">
+      <!-- Embed small silent looping preview clip -->
+      <a href="form-content.html">
+        <video autoplay muted loop playsinline class="preview-clip">
+          <source src="videoclips/form-content-preview.mp4" type="video/mp4" />
+          <!-- Fallback text for unsupported browsers -->
+          Your browser does not support the video tag.
+        </video>
+      </a>
+      <!-- Title of the video work -->
+     <p class="project-title"><a href="form-content/form-content.html">FORM/CONTENT2, 2023</a>
+<p>SHORT-FORM SOLO WORK.<p>
+    </div>
+
+
 
 
 
