--- a/videos/nothing-went-wrong/nothing-went-wrong.html
+++ b/videos/nothing-went-wrong/nothing-went-wrong.html
@@ -33,7 +33,7 @@
   <!-- 📃 Description Section -->
   <section>
     <h1 class="title">AND IF NOTHING WENT WRONG</h1>
-    <p>Long Form Solo Video Effort, 2024.</p>
+    <p>Long-Form Solo Video Effort, 2024.</p>
     <li>Debuted at YES GALLERY's exhibition "I Will Remember This Dream Of Gentleness".</li>      
 
 
@@ -43,8 +43,7 @@
   </div>
 
   <p><strong>Credits</strong></p>
-  <p>Shot, dir, edit – Luke Magette.</p>
-  <p>Featuring Cameron Clifford & Luke Magette.</p>
+  <p>Featuring Cameron Clifford.</p>
   <p>Special thanks to Ryan Aasen.</p>
 
 
