--- a/videos/index.html
+++ b/videos/index.html
@@ -53,7 +53,7 @@
         </video>
       </a>
       <!-- Title of the video work -->
-     <p class="project-title"><a href="mood-ring.html">MOOD RING, 2025</a>
+     <p class="project-title"><a href="mood-ring/mood-ring.html">MOOD RING, 2025</a>
 <p>MUSIC VIDEO FOR SOFIE LOPEZ.<p>
     </div>
 
@@ -64,7 +64,7 @@
           <source src="videos/videoclips/take-it-preview.mp4" type="video/mp4" />
         </video>
       </a>
-     <p class="project-title"><a href="take-it.html">TAKE IT OR LEAVE, 2025</a>
+     <p class="project-title"><a href="take-it/take-it.html">TAKE IT OR LEAVE, 2025</a>
 <p>PROMOTIONAL VIDEO FOR SOFIE LOPEZ.<p>
     </div>
 
@@ -75,7 +75,7 @@
           <source src="videos/videoclips/motion-graphics-preview.mp4" type="video/mp4" />
         </video>
       </a>
-     <p class="project-title"><a href="motion-graphics.html">UNTITLED MOTION GRAPHICS PROJECT, 2023</a>
+     <p class="project-title"><a href="motion-graphics/motion-graphics.html">UNTITLED MOTION GRAPHICS PROJECT, 2023</a>
 <p>SOLO VIDEO WORK.<p>
     </div>
 
@@ -86,7 +86,7 @@
           <source src="videos/videoclips/shwankgaze-preview.mp4" type="video/mp4" />
         </video>
       </a>
-     <p class="project-title"><a href="shwankgaze.html">SHWANKGAZE, 2025</a>
+     <p class="project-title"><a href="shwankgaze/shwankgaze.html">SHWANKGAZE, 2025</a>
 <p>VISUALIZER FOR SHWANK.<p>
     </div>
 
@@ -97,7 +97,7 @@
           <source src="videos/videoclips/oranges-preview.mp4" type="video/mp4" />
         </video>
       </a>
-     <p class="project-title"><a href="oranges.html">ORANGES, 2023</a>
+     <p class="project-title"><a href="oranges/oranges.html">ORANGES, 2023</a>
 <p>MUSIC VIDEO FOR KIERA LYNN.<p>    </div>
 
     <!-- Video Block 5: FAME FASHION SHOW -->
@@ -107,7 +107,7 @@
           <source src="videos/videoclips/fame-preview.mp4" type="video/mp4" />
         </video>
       </a>
-     <p class="project-title"><a href="fame.html">FAME FASHION SHOW REEL, 2023</a>
+     <p class="project-title"><a href="fame/fame.html">FAME FASHION SHOW REEL, 2023</a>
 <p>RECAP VIDEO FOR STEVENS INST OF TECHNOLOGY.<p>
     </div>
 
