--- a/videos/nothing-went-wrong/nothing-went-wrong.html
+++ b/videos/nothing-went-wrong/nothing-went-wrong.html
@@ -21,13 +21,13 @@
 
   <!-- 🎬 Centered Video Clip -->
   <div class="image-container">
-    <a href="https://example.com/full-video-link" target="_blank">
+    <a href="https://vimeo.com/822745162?p=0s" target="_blank">
       <video autoplay muted loop playsinline class="preview-clip" style="max-width: 600px; width: 100%;">
         <source src="videoclips/nothing-went-wrong-preview.mp4" type="video/mp4" />
         Your browser does not support the video tag.
       </video>
     </a>
-    <p class="caption">Click video to view preview reel</p>
+    <p class="caption">Click video to view preview reel. Runtime 8:10.</p>
   </div>
 
   <!-- 📃 Description Section -->
