--- a/videos/mood-ring/mood-ring.html
+++ b/videos/mood-ring/mood-ring.html
@@ -27,14 +27,14 @@
         Your browser does not support the video tag.
       </video>
     </a>
-    <p class="caption">Click video to watch "Mood Ring" on YouTube.</p>
+    <p class="caption">Click above to watch in full.</p>
   </div>
 
   <!-- 📃 Description Section -->
   <section>
-    <h1 class="title">Mood Ring</h1>
-    <p>Music Video for Sofie Lopez, 2025.</p>
-    <li>"Mood Ring" is the lead single for Sofie Lopez's debut EP, "Late Bloomer".</li>      
+    <h1 class="title">MOOD RING</h1>
+    <p>Music Video for sofie lopez, 2025.</p>
+    <li>"Mood Ring" is the lead single for sofie lopez's debut EP, "Late Bloomer".</li>      
 
 
       <!-- 📷 Optional Photo Before Text -->
