--- a/videos/nothing-went-wrong/nothing-went-wrong.html
+++ b/videos/nothing-went-wrong/nothing-went-wrong.html
@@ -27,7 +27,7 @@
         Your browser does not support the video tag.
       </video>
     </a>
-    <p class="caption">Click video to view preview reel. Runtime 8:10.</p>
+    <p class="caption">Click above to view preview reel. Runtime 8:10.</p>
   </div>
 
   <!-- 📃 Description Section -->
