--- a/videos/mood-ring/mood-ring.html
+++ b/videos/mood-ring/mood-ring.html
@@ -17,7 +17,7 @@
 <body>
 
   <!-- 🔙 Navigation Links -->
-  <p><a href="/index.html">← Back to Home</a> | <a href="videos/index.html">← Back to Videos</a></p>
+<p><a href="../../index.html">← Back to Home</a> | <a href="../index.html">← Back to Videos</a></p>
 
   <!-- 🎬 Centered Video Clip -->
   <div class="image-container">
