--- a/videos/mood-ring/mood-ring.html
+++ b/videos/mood-ring/mood-ring.html
@@ -39,16 +39,16 @@
 
       <!-- 📷 Optional Photo Before Text -->
   <div class="image-container">
-    <img src="images/nothing-went-wrong-still1.jpg" alt="Still from video" class="header-img" />
+    <img src="images/mood-ring-still1.jpg" alt="Still from video" class="header-img" />
   </div>
 
   <p><strong>Credits</strong></p>
-  <p>Featuring Sofia Lopez, Cameron Clifford, Ogenna Oraedu, Marcus Wright, & Trinity Lundemo.</p>
-  <p>Also Featuring Hannah Goldschmidt, Maya Mitchell, Corey Batchelder, Brian Katat, Kiera Kennedy, Alec Pagano, Kyle Castillo, Nick Re, & Mathilda Rice.</p>
-  <p>Production Assistants - Brian Collins, Mathilda Rice, Konner Ezra, Trinity Lundemo, & Sophia Patz.</p>
+  <p>Featuring Sofia Lopez, Cameron Clifford, Ogenna Oraedu, Marcus Wright, and Trinity Lundemo.</p>
+  <p>Also Featuring Hannah Goldschmidt, Maya Mitchell, Corey Batchelder, Brian Katat, Kiera Kennedy, Alec Pagano, Kyle Castillo, Nick Re, and Mathilda Rice.</p>
+  <p>Production Assistants - Brian Collins, Mathilda Rice, Konner Ezra, Trinity Lundemo, and Sophia Patz.</p>
   <p>Additional Photography by Sophia Patz.</p>
-  <p>Special thanks to Olivia Boucher on behalf of 938collective & Mr. & Mrs. Lopez.</p>
-  <p>Additional thanks to Kavya Ramesh, Diego Ramirez, Leia Magette, & Vincent Olivieri.</p>
+  <p>Special thanks to Olivia Boucher on behalf of 938collective and Mr. and Mrs. Lopez.</p>
+  <p>Additional thanks to Kavya Ramesh, Diego Ramirez, Leia Magette, and Vincent Olivieri.</p>
 
   <p><strong>Details</strong></p>
   <p>Runtime – 4:27.</p>
@@ -60,7 +60,7 @@
 
   <!-- 📷 Optional Photo After Text -->
   <div class="image-container">
-    <img src="images/nothing-went-wrong-still2.jpg" alt="Another still from the project" class="header-img" />
+    <img src="images/mood-ring-still2.jpg" alt="Another still from the project" class="header-img" />
   </div>
 
 </body>
