--- a/videos/nothing-went-wrong/nothing-went-wrong.html
+++ b/videos/nothing-went-wrong/nothing-went-wrong.html
@@ -23,7 +23,7 @@
   <div class="image-container">
     <a href="https://vimeo.com/822745162?p=0s" target="_blank">
       <video autoplay muted loop playsinline class="preview-clip" style="max-width: 600px; width: 100%;">
-        <source src="videoclips/nothing-went-wrong-preview.mp4" type="video/mp4" />
+        <source src="../videoclips/nothing-went-wrong-preview.mp4" type="video/mp4" />
         Your browser does not support the video tag.
       </video>
     </a>
@@ -40,7 +40,7 @@
     
       <!-- 📷 Optional Photo Before Text -->
   <div class="image-container">
-    <img src="images/nothing-went-wrong-still1.webp" alt="Still from video" class="header-img" />
+    <img src="../images/nothing-went-wrong-still1.webp" alt="Still from video" class="header-img" />
   </div>
 
   <p><strong>Credits</strong></p>
@@ -59,7 +59,7 @@
 
   <!-- 📷 Optional Photo After Text -->
   <div class="image-container">
-    <img src="images/nothing-went-wrong-still2.jpg" alt="Another still from the project" class="header-img" />
+    <img src="../images/nothing-went-wrong-still2.jpg" alt="Another still from the project" class="header-img" />
   </div>
 
 </body>
