--- a/videos/nothing-went-wrong/nothing-went-wrong.html
+++ b/videos/nothing-went-wrong/nothing-went-wrong.html
@@ -39,7 +39,7 @@
 
     
       <!-- 📷 Optional Photo Before Text -->
-  <div class="image-container">
+  <div class="header-image-container">
     <img src="../images/nothing-went-wrong-still1.webp" alt="Still from video" class="header-img" />
   </div>
 
