--- a/videos/nothing-went-wrong/nothing-went-wrong.html
+++ b/videos/nothing-went-wrong/nothing-went-wrong.html
@@ -15,7 +15,8 @@
 </head>
 
 <body>
-
+<div class="main-content">
+  
   <!-- 🔙 Navigation Links -->
 <p><a href="../../index.html">← Back to Home</a> | <a href="../index.html">← Back to Videos</a></p>
 
@@ -62,6 +63,7 @@
     <img src="../images/nothing-went-wrong-still2.jpg" alt="Another still from the project" class="header-img" />
   </div>
 
+</div>
 </body>
 </html>
 
