--- a/videos/nothing-went-wrong/nothing-went-wrong.html
+++ b/videos/nothing-went-wrong/nothing-went-wrong.html
@@ -23,7 +23,7 @@
   <!-- 🎬 Centered Video Clip -->
   <div class="image-container">
     <a href="https://vimeo.com/822745162?p=0s" target="_blank">
-      <video autoplay muted loop playsinline class="preview-clip" style="max-width: 600px; width: 100%;">
+      <video autoplay muted loop playsinline class="preview-clip">
         <source src="../videoclips/nothing-went-wrong-preview.mp4" type="video/mp4" />
         Your browser does not support the video tag.
       </video>
