--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
   <div class="header-image-container">
-    <img src="BillboardHeader2.webp" alt="Billboard" class="header-img" />
+<img src="images/BillboardHeader2.jpg" alt="Billboard" class="billboard-img" />
     <p class="caption">Billboard, 2024</p>
   </div>
 
