--- a/videos/nothing-went-wrong/nothing-went-wrong.html
+++ b/videos/nothing-went-wrong/nothing-went-wrong.html
@@ -43,7 +43,7 @@
 
     <!-- 📷 Optional Photo Before Text -->
     <div class="image-container">
-      <img src="../images/nothing-went-wrong-still1.webp" alt="Still from video" class="media" />
+      <img src="../images/nothing-went-wrong-still1.webp" alt="Still from video" class=".billboard-img" />
     </div>
 
     <p><strong>Credits</strong></p>
