--- a/videos/nothing-went-wrong/nothing-went-wrong.html
+++ b/videos/nothing-went-wrong/nothing-went-wrong.html
@@ -21,7 +21,7 @@
   <p><a href="../../index.html">← Back to Home</a> | <a href="../index.html">← Back to Videos</a></p>
 
   <!-- 🎬 Centered Video Clip -->
-  <div class="image-container">
+  <div class="header-image-container">
     <a href="https://vimeo.com/822745162?p=0s" target="_blank">
       <video autoplay muted loop playsinline class="media">
         <source src="../videoclips/nothing-went-wrong-preview.mp4" type="video/mp4" />
@@ -42,7 +42,7 @@
     </li>
 
     <!-- 📷 Optional Photo Before Text -->
-    <div class="image-container">
+    <div class="header-image-container">
       <img src="../images/nothing-went-wrong-still1.webp" alt="Still from video" class=".billboard-img" />
     </div>
 
@@ -59,7 +59,7 @@
   </section>
 
   <!-- 📷 Optional Photo After Text -->
-  <div class="image-container">
+  <div class="header-image-container">
     <img src="../images/nothing-went-wrong-still2.jpg" alt="Another still from the project" class="media" />
   </div>
 
