--- a/videos/nothing-went-wrong/nothing-went-wrong.html
+++ b/videos/nothing-went-wrong/nothing-went-wrong.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>AND IF NOTHING WENT WRONG – Luke M</title>
-  <link rel="stylesheet" href="../style.css" />
+  <link rel="stylesheet" href="artbyluke-main/style.css" />
 
   <!-- Open Graph (Optional) -->
   <meta property="og:title" content="AND IF NOTHING WENT WRONG – Luke M" />
