--- a/videos/nothing-went-wrong/nothing-went-wrong.html
+++ b/videos/nothing-went-wrong/nothing-went-wrong.html
@@ -43,9 +43,9 @@
 
     <!-- 📷 Optional Photo Before Text -->
     <div class="header-image-container">
-      <img src="../images/nothing-went-wrong-still1.webp" alt="Still from video" class=".billboard-img" />
+      <img src="../images/nothing-went-wrong-still1.webp" alt="Still from video" class="billboard-img" />
     </div>
-
+    
     <p><strong>Credits</strong></p>
     <p>Featuring Cameron Clifford.</p>
     <p>Special thanks to Ryan Aasen.</p>
