--- a/videos/nothing-went-wrong/nothing-went-wrong.html
+++ b/videos/nothing-went-wrong/nothing-went-wrong.html
@@ -43,7 +43,7 @@
 
     <!-- 📷 Optional Photo Before Text -->
     <div class="header-image-container">
-      <img src="../images/nothing-went-wrong-still1.webp" alt="Still from video" class="billboard-img" />
+      <img src="../images/nothing-went-wrong-still1.webp" alt="Still from video" class="project-img" />
     </div>
     
     <p><strong>Credits</strong></p>
@@ -60,7 +60,7 @@
 
   <!-- 📷 Optional Photo After Text -->
   <div class="header-image-container">
-    <img src="../images/nothing-went-wrong-still2.jpg" alt="Another still from the project" class="media" />
+    <img src="../images/nothing-went-wrong-still2.jpg" alt="Another still from the project" class="project-img" />
   </div>
 
 </div>
