--- a/videos/nothing-went-wrong/nothing-went-wrong.html
+++ b/videos/nothing-went-wrong/nothing-went-wrong.html
@@ -44,13 +44,13 @@
     <div class="header-image-container">
       <img src="../images/nothing-went-wrong-still1.webp" alt="Still from video" class="project-img" />
     </div>
-    
-    <p><strong>Credits</strong></p>
+
+    <p class="section-label"><strong>Credits</strong></p>
       <ul style="list-style: none; padding-left: 0; line-height: 1.3;">
         <li>Featuring Cameron Clifford.</li>
         <li>Special thanks to Ryan Aasen.</li>
 
-    <p><strong>Details</strong></p>
+    <p class="section-label"><strong>Details</strong></p>
       <ul style="list-style: none; padding-left: 0; line-height: 1.3;">
         <li>Full-length runtime – 1:20:01.</li>
         <li>Recorded live on security cameras & camcorders.</li>
