--- a/videos/nothing-went-wrong/nothing-went-wrong.html
+++ b/videos/nothing-went-wrong/nothing-went-wrong.html
@@ -61,10 +61,15 @@
     
   </section>
 
-  <!-- 📷 Optional Photo After Text -->
+  <!-- Photos After Text -->
   <div class="header-image-container">
-    <img src="../images/nothing-went-wrong-still2.jpg" alt="Another still from the project" class="project-img" />
+    <img src="../images/nothing-went-wrong-still2.webp" alt="Another still from the project" class="project-img" />
   </div>
+
+  <div class="header-image-container">
+    <img src="../images/nothing-went-wrong-still3.webp" alt="Behind the scenes still from the project" class="project-img" />
+  </div>
+        
 
 </div>
 </body>
