--- a/index.html
+++ b/index.html
@@ -37,15 +37,22 @@
     </p>
 
     <ul>
-      <li>“AND IF NOTHING WENT WRONG” – 2024</li>
-      <li>“MOOD RING” BY SOFIE LOPEZ – 2025</li>
-      <li>“TAKE IT OR LEAVE” BY SOFIE LOPEZ – 2025</li>
-      <li>UNTITLED MOTION GRAPHICS PROJECT – 2023</li>
-      <li>"SHWANKGAZE" VISUALIZER – 2024</li>
-      <li>“ORANGES” BY KIERA LYNN – 2023</li>
-      <li>FAME FASHION SHOW REEL - 2023</li>
+      <li><a href="./videos/nothing-went-wrong/nothing-went-wrong.html" class="project-link">“AND IF NOTHING WENT WRONG” – 2024</a></li>
+      <li><a href="./videos/mood-ring/mood-ring.html" class="project-link">“MOOD RING” BY SOFIE LOPEZ – 2025</a></li>
+      <li><a href="./videos/take-it-or-leave/take-it-or-leave.html" class="project-link">“TAKE IT OR LEAVE” BY SOFIE LOPEZ – 2025</a></li>
+      <li><a href="./videos/motion-graphics/motion-graphics.html" class="project-link">UNTITLED MOTION GRAPHICS PROJECT – 2023</li>
+      <li><a href="./videos/shwankgaze/shwankgaze.html" class="project-link">"SHWANKGAZE" VISUALIZER – 2024</li>
+      <li><a href="./videos/oranges/oranges.html" class="project-link">“ORANGES” BY KIERA LYNN – 2023</li>
+      <li><a href="./videos/fame/fame.html" class="project-link">FAME FASHION SHOW REEL - 2023</li>
     </ul>
 
+<ul>
+
+  <!-- ...and so on -->
+</ul>
+
+    
+    
     <h2>Browse By Client</h2>
     <p>Select a client to view full list of works.</p>
 
