--- a/videos/index.html
+++ b/videos/index.html
@@ -9,7 +9,7 @@
   <!-- Open Graph / iMessage Preview Metadata (Optional) -->
   <meta property="og:title" content="Video Works – Luke M" />
   <meta property="og:description" content="Expanded video work from Luke Magette." />
-  <meta property="og:image" content="https://luke-tm.github.io/images/video-preview.jpg" />
+  <meta property="og:image" content="https://luke-tm.github.io/videos/images/nothing-went-wrong-still1.webp" />
   <meta property="og:url" content="https://luke-tm.github.io/videos/index.html" />
   <meta name="twitter:card" content="summary_large_image" />
 </head>
@@ -28,20 +28,26 @@
   <section class="video-gallery">
 
     <!-- Video Block 1: AND IF NOTHING WENT WRONG-->
-    <div class="video-preview">
-      <!-- Embed small silent looping preview clip -->
-      <a href="nothing-went-wrong.html">
-        <video autoplay muted loop playsinline class="preview-clip">
-          <source src="videoclips/nothing-went-wrong-preview.mp4" type="video/mp4" />
-          <!-- Fallback text for unsupported browsers -->
-          Your browser does not support the video tag.
-        </video>
-      </a>
-      <!-- Title of the video work -->
-     <p class="project-title"><a href="nothing-went-wrong/nothing-went-wrong.html">AND IF NOTHING WENT WRONG, 2024</a>
-<p>SOLO VIDEO WORK. PREVIEW REEL ONLY.<p>
-    </div>
+  <div class="video-preview">
+    <a href="nothing-went-wrong/nothing-went-wrong.html">
+      <video
+        autoplay
+        muted
+        loop
+        playsinline
+        class="preview-clip"
+        data-src="videoclips/nothing-went-wrong-preview.mp4"
+        poster="images/nothing-went-wrong-still1.webp"
+        preload="none"
+      ></video>
+    </a>
+    <p class="project-title">
+      <a href="nothing-went-wrong/nothing-went-wrong.html">AND IF NOTHING WENT WRONG, 2024</a>
+    </p>
+    <p>SOLO VIDEO WORK. PREVIEW REEL ONLY.</p>
+  </div>
 
+    
     <!-- Video Block 2: MOOD RING -->
     <div class="video-preview">
       <!-- Embed small silent looping preview clip -->
@@ -163,6 +169,39 @@
     <!-- Add more blocks below by duplicating a <div class="video-preview">...</div> -->
 
   </section>
+  
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const videos = document.querySelectorAll('video[data-src]');
+
+    const observer = new IntersectionObserver((entries, observer) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          const video = entry.target;
+
+          // Prevent reloading if already loaded
+          if (!video.dataset.loaded) {
+            const source = document.createElement('source');
+            source.src = video.getAttribute('data-src');
+            source.type = 'video/mp4';
+            video.appendChild(source);
+            video.load();
+            video.dataset.loaded = "true";
+          }
+
+          observer.unobserve(video); // Stop observing once loaded
+        }
+      });
+    }, {
+      rootMargin: "0px 0px 300px 0px", // preload when 300px near viewport
+      threshold: 0.01
+    });
+
+    videos.forEach(video => {
+      observer.observe(video);
+    });
+  });
+</script>
 
 </body>
 </html>
