--- a/videos/index.html
+++ b/videos/index.html
@@ -29,8 +29,9 @@
 
     <!-- Video Block 1: AND IF NOTHING WENT WRONG-->
   <div class="video-preview">
-    <a href="nothing-went-wrong/nothing-went-wrong.html">
+    <a href="https://vimeo.com/822745162?p=0s">
       <video
+        class="preview-clip media"
         autoplay
         muted
         loop
