--- a/videos/nothing-went-wrong/nothing-went-wrong.html
+++ b/videos/nothing-went-wrong/nothing-went-wrong.html
@@ -9,8 +9,8 @@
   <!-- Open Graph (Optional) -->
   <meta property="og:title" content="AND IF NOTHING WENT WRONG – Luke M" />
   <meta property="og:description" content="Project video page for 'And If Nothing Went Wrong'" />
-  <meta property="og:image" content="https://luke-tm.github.io/videos/videoclips/nothing-went-wrong-preview.jpg" />
-  <meta property="og:url" content="https://luke-tm.github.io/videos/nothing-went-wrong.html" />
+  <meta property="og:image" content="https://luke-tm.github.io/portfolio/videos/images/nothing-went-wrong-still1.webp" />
+  <meta property="og:url" content="https://luke-tm.github.io/portfolio/videos/nothing-went-wrong/nothing-went-wrong.html" />
   <meta name="twitter:card" content="summary_large_image" />
 </head>
 
