--- a/videos/index.html
+++ b/videos/index.html
@@ -50,20 +50,27 @@
 
     
     <!-- Video Block 2: MOOD RING -->
-    <div class="video-preview">
-      <!-- Embed small silent looping preview clip -->
-      <a href="mood-ring.html">
-        <video autoplay muted loop playsinline class="preview-clip">
-          <source src="videos/videoclips/mood-ring-preview.mp4" type="video/mp4" />
-          <!-- Fallback text for unsupported browsers -->
-          Your browser does not support the video tag.
-        </video>
-      </a>
-      <!-- Title of the video work -->
-     <p class="project-title"><a href="mood-ring/mood-ring.html">MOOD RING, 2025</a>
-<p>MUSIC VIDEO FOR SOFIE LOPEZ.<p>
     </div>
-
+  <div class="video-preview">
+    <a href="https://youtu.be/YUAKauLhYCY?si=I-yBTfFlOTs81N0I">
+      <video
+        class="preview-clip media"
+        autoplay
+        muted
+        loop
+        playsinline
+        class="preview-clip"
+        data-src="videoclips/mood-ring.mp4"
+        poster="images/mood-ring-still1.webp"
+        preload="none"
+      ></video>
+    </a>
+    <p class="project-title">
+      <a href="mood-ring/mood-ring.html">MOOD RING, 2025</a>
+    </p>
+    <p>MUSIC VIDEO FOR SOFIE LOPEZ.</p>
+  </div>
+    
     <!-- Video Block 3: TAKE IT OR LEAVE -->
     <div class="video-preview">
       <a href="take-it.html">
