--- a/videos/index.html
+++ b/videos/index.html
@@ -21,7 +21,7 @@
   <!-- Page Header -->
   <header>
     <h1 class="title">VIDEO WORKS</h1>
-    <p>Browse listed projects below. Click on the preview clip to watch the full video. Click on the title to learn more about the project.</p>
+    <p>Browse listed projects below. Click the preview clip to watch in full. Click the title to learn more about each project.</p>
   </header>
 
   <!-- Begin Video Gallery Container -->
