--- a/index.html
+++ b/index.html
@@ -51,13 +51,11 @@
   <!-- ...and so on -->
 </ul>
 
-    
-    
     <h2>Browse By Client</h2>
     <p>Select a client to view full list of works.</p>
 
     <ul>
-      <li>SOFIE LOPEZ - ARTIST</li>
+      <li><a href="./clients/sofie-lopez.html" class="project-link">“SOFIE LOPEZ - ARTIST</a></li>
       <li>SHWANK - BAND</li>
       <li>938COLLECTIVE - PRODUCTION GROUP</li>
       <li>STEVENS INST OF TECHNOLOGY - UNIVERSITY</li>
@@ -93,8 +91,10 @@
     </nav>
 
     <br><br>
-    <img src="images/jeffersons.jpg" alt="Table at Jefferson's coffee" />
-    <br><br>
+  <p></p>
+  <div class="header-image-container">
+  <img src="beach-footer.webp" alt="beach" class="billboard-img" />
+  </div>    <br><br>
 
     <a href="./blog.html">Blog</a>
   </div>
