--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
       <li><a href="./videos/nothing-went-wrong/nothing-went-wrong.html" class="project-link">“AND IF NOTHING WENT WRONG” – 2024</a></li>
       <li><a href="./videos/mood-ring/mood-ring.html" class="project-link">“MOOD RING” BY SOFIE LOPEZ – 2025</a></li>
       <li><a href="./videos/take-it-or-leave/take-it-or-leave.html" class="project-link">“TAKE IT OR LEAVE” BY SOFIE LOPEZ – 2025</a></li>
-      <li><a href="./videos/motion-graphics/motion-graphics.html" class="project-link">UNTITLED MOTION GRAPHICS PROJECT – 2023</li>
-      <li><a href="./videos/shwankgaze/shwankgaze.html" class="project-link">"SHWANKGAZE" VISUALIZER – 2024</li>
-      <li><a href="./videos/oranges/oranges.html" class="project-link">“ORANGES” BY KIERA LYNN – 2023</li>
-      <li><a href="./videos/fame/fame.html" class="project-link">FAME FASHION SHOW REEL - 2023</li>
+      <li><a href="./videos/motion-graphics/motion-graphics.html" class="project-link">UNTITLED MOTION GRAPHICS PROJECT – 2023</a></li>
+      <li><a href="./videos/shwankgaze/shwankgaze.html" class="project-link">"SHWANKGAZE" VISUALIZER – 2024</a></li>
+      <li><a href="./videos/oranges/oranges.html" class="project-link">“ORANGES” BY KIERA LYNN – 2023</a></li>
+      <li><a href="./videos/fame/fame.html" class="project-link">FAME FASHION SHOW REEL - 2023</a></li>
     </ul>
 
 <ul>
@@ -55,13 +55,14 @@
     <p>Select a client to view full list of works.</p>
 
     <ul>
-      <li><a href="./clients/sofie-lopez.html" class="project-link">“SOFIE LOPEZ - ARTIST</a></li>
-      <li>SHWANK - BAND</li>
-      <li>938COLLECTIVE - PRODUCTION GROUP</li>
-      <li>STEVENS INST OF TECHNOLOGY - UNIVERSITY</li>
-      <li>KIERA LYNN - ARTIST</li>
-      <li>622CHAOS - ARTIST</li>
-      <li>5TWO - LIVE PERFORMANCE</li>
+      <li><a href="./clients/sofie-lopez.html" class="project-link">SOFIE LOPEZ - ARTIST</a></li>
+      <li><a href="./clients/shwank.html" class="project-link">SHWANK - BAND</a></li>
+      <li><a href="./clients/938collective.html" class="project-link">938COLLECTIVE - PRODUCTION GROUP</a></li>
+      <li><a href="./clients/sit.html" class="project-link">STEVENS INST OF TECHNOLOGY - UNIVERSITY</a></li>
+      <li><a href="./clients/kiera-lynn.html" class="project-link">KIERA LYNN - ARTIST</a></li>
+      <li><a href="./clients/worren.html" class="project-link">WORREN - ARTIST</a></li>
+      <li><a href="./clients/622chaos.html" class="project-link">622CHAOS - ARTIST</a></li>
+      <li><a href="./clients/5two.html" class="project-link">5TWO - LIVE PERFORMANCE</a></li>
     </ul>
 
 
@@ -82,9 +83,9 @@
     <h2>Contact</h2>
     <p>Reach out to inquire about pricing for installation work & commissions.</p>
 
-    <h2>Stay Tuned via:</h2>
+    <h2>Stay Tuned via</h2>
     <nav>
-      <a href="./beheresound/xur/xur.html">XUR</a> |
+      <li><a href="https://www.instagram.com/luke_magette" class="project-link">INSTA</a></li>
       <a href="./beheresound/shwank/shwank.html">Shwank</a> |
       <a href="./beheresound/jh/jh.html">JH</a> |
       <a href="./beheresound/misc.html">Misc</a>
