--- a/videos/take-it-or-leave/take-it-or-leave.html
+++ b/videos/take-it-or-leave/take-it-or-leave.html
@@ -22,7 +22,7 @@
 
   <!-- 🎬 Centered Video Clip -->
   <div class="header-image-container">
-    <a href="https://youtu.be/YUAKauLhYCY?si=I-yBTfFlOTs81N0I" target="_blank">
+    <a href="https://youtu.be/AsN2Yded37U?si=FoviTSw7pfIv5uZS" target="_blank">
       <video autoplay muted loop playsinline class="media">
         <source src="../videoclips/take-it-or-leave-preview.mp4" type="video/mp4" />
         Your browser does not support the video tag.
