--- a/videos/index.html
+++ b/videos/index.html
@@ -72,26 +72,48 @@
   </div>
     
     <!-- Video Block 3: TAKE IT OR LEAVE -->
-    <div class="video-preview">
-      <a href="take-it.html">
-        <video autoplay muted loop playsinline class="preview-clip">
-          <source src="videos/videoclips/take-it-preview.mp4" type="video/mp4" />
-        </video>
-      </a>
-     <p class="project-title"><a href="take-it/take-it.html">TAKE IT OR LEAVE, 2025</a>
-<p>PROMOTIONAL VIDEO FOR SOFIE LOPEZ.<p>
-    </div>
+      </div>
+  <div class="video-preview">
+    <a href="https://youtu.be/AsN2Yded37U?si=FoviTSw7pfIv5uZS">
+      <video
+        class="preview-clip media"
+        autoplay
+        muted
+        loop
+        playsinline
+        class="preview-clip"
+        data-src="videoclips/take-it-or-leave.mp4"
+        poster="images/take-it-or-leave-still1.webp"
+        preload="none"
+      ></video>
+    </a>
+    <p class="project-title">
+      <a href="take-it-or-leave/take-it-or-leave.html">TAKE IT OR LEAVE, 2025</a>
+    </p>
+    <p>PROMOTIONAL VIDEO FOR SOFIE LOPEZ.</p>
+  </div>
 
-    <!-- Video Block 4: UNTITLED MOTION GRAPHICS PROJECT -->
-    <div class="video-preview">
-      <a href="motion-graphics.html">
-        <video autoplay muted loop playsinline class="preview-clip">
-          <source src="videos/videoclips/motion-graphics-preview.mp4" type="video/mp4" />
-        </video>
-      </a>
-     <p class="project-title"><a href="motion-graphics/motion-graphics.html">UNTITLED MOTION GRAPHICS PROJECT, 2023</a>
-<p>SOLO VIDEO WORK.<p>
-    </div>
+    <!-- Video Block 4: UNTITLED MOTION GRAPHICS PROJECT --> 
+          </div>
+  <div class="video-preview">
+    <a href="https://www.dropbox.com/scl/fi/iwf0zfhvzi0sqm264tmqb/342FinalDraft2.mp4?rlkey=hhnk94lia6uy5ruj09ax0xw8v&e=1&st=g1psml04&bmus=1&dl=0">
+      <video
+        class="preview-clip media"
+        autoplay
+        muted
+        loop
+        playsinline
+        class="preview-clip"
+        data-src="videoclips/motion-graphics.mp4"
+        poster="images/motion-graphics-still1.webp"
+        preload="none"
+      ></video>
+    </a>
+    <p class="project-title">
+      <a href="motion-graphics/motion-graphics.html">UNTITLED MOTION GRAPHICS PROJECT, 2023</a>
+    </p>
+    <p>SOLO VIDEO WORK.</p>
+  </div>
 
     <!-- Video Block 5: SHWANKGAZE -->
     <div class="video-preview">
