--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     <h2>Stay Tuned via</h2>
     <nav>
-      <li><a href="https://www.instagram.com/luke_magette" class="project-link">INSTA</a></li>
+      <a href="https://www.instagram.com/luke_magette">INSTA</a> |
       <a href="./beheresound/shwank/shwank.html">Shwank</a> |
       <a href="./beheresound/jh/jh.html">JH</a> |
       <a href="./beheresound/misc.html">Misc</a>
