--- a/clients/sofie-lopez.html
+++ b/clients/sofie-lopez.html
@@ -1,1 +1,90 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sofie Lopez – Client Portfolio | Luke M</title>
+  <link rel="stylesheet" href="../../artbyluke-main/style.css" />
 
+  <!-- Open Graph Metadata -->
+  <meta property="og:title" content="Sofie Lopez – Client Portfolio" />
+  <meta property="og:description" content="Selected video, photo, and design work for Sofie Lopez." />
+  <meta property="og:image" content="https://luke-tm.github.io/images/sofie-lopez-preview.jpg" />
+  <meta property="og:url" content="https://luke-tm.github.io/portfolio/clients/sofie-lopez.html" />
+  <meta name="twitter:card" content="summary_large_image" />
+</head>
+
+<body>
+<div class="main-content">
+
+  <!-- 🔙 Navigation -->
+  <p>
+    <a href="../../index.html">← Back to Home</a> | 
+  </p>
+
+  <!-- 📌 Client Header -->
+  <header>
+    <h1 class="title">SOFIE LOPEZ</h1>
+    <p>Selected collaborations: music videos, live performances, promotional media.</p>
+  </header>
+
+  <!-- 🎬 Video Section -->
+  <section>
+    <h2>Video Projects</h2>
+    <div class="video-gallery">
+      <div class="video-preview">
+        <a href="../../videos/mood-ring/mood-ring.html">
+          <video autoplay muted loop playsinline class="media">
+            <source src="../../videos/videoclips/mood-ring-preview.mp4" type="video/mp4" />
+          </video>
+        </a>
+        <p class="project-title"><a href="../../videos/mood-ring/mood-ring.html">MOOD RING, 2025</a></p>
+      </div>
+
+      <div class="video-preview">
+        <a href="../../videos/take-it-or-leave/take-it-or-leave.html">
+          <video autoplay muted loop playsinline class="media">
+            <source src="../../videos/videoclips/take-it-preview.mp4" type="video/mp4" />
+          </video>
+        </a>
+        <p class="project-title"><a href="../../videos/take-it-or-leave/take-it-or-leave.html">TAKE IT OR LEAVE, 2025</a></p>
+      </div>
+    </div>
+  </section>
+
+  <!-- 🖼️ Posters Section -->
+  <section>
+    <h2>Posters & Promotional Art</h2>
+    <div class="poster-grid">
+      <img src="../../images/sofie-poster1.webp" alt="Concert poster 1" class="project-img" />
+      <img src="../../images/sofie-poster2.webp" alt="Concert poster 2" class="project-img" />
+    </div>
+  </section>
+
+  <!-- 📸 Concert Photos -->
+  <section>
+    <h2>Concert & Live Photos</h2>
+    <div class="photo-gallery">
+      <img src="../../images/sofie-concert1.jpg" alt="Sofie Lopez live 1" class="project-img" />
+      <img src="../../images/sofie-concert2.jpg" alt="Sofie Lopez live 2" class="project-img" />
+      <img src="../../images/sofie-concert3.jpg" alt="Sofie Lopez live 3" class="project-img" />
+    </div>
+  </section>
+
+  <!-- 📱 Social Media Content -->
+  <section>
+    <h2>Social Media Content</h2>
+    <p>Short-form clips and promotional assets created for online campaigns.</p>
+    <div class="social-grid">
+      <video autoplay muted loop playsinline class="media">
+        <source src="../../videos/videoclips/sofie-social1.mp4" type="video/mp4" />
+      </video>
+      <video autoplay muted loop playsinline class="media">
+        <source src="../../videos/videoclips/sofie-social2.mp4" type="video/mp4" />
+      </video>
+    </div>
+  </section>
+
+</div>
+</body>
+</html>
